table alignment fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -483,6 +483,7 @@
 			 width:50%;
 			 margin: auto;
 			 padding: center;
+			 vertical-align: middle;
 		}
 
 		th {
